# serializer version: 1
# name: test_generate_from_external_service
  'The weather in Paris is currently misty with a temperature of -0.55°C, feeling like -3.75°C, and a humidity of 95%.'
# ---
# name: test_generate_from_knowledge_base
  'Some nice things to see in Paris include the Eiffel Tower for its panoramic views, the Louvre Museum for its art masterpieces like the Mona Lisa, and the Notre-Dame Cathedral for its Gothic architecture. Additionally, you can explore the Champs-Élysées leading to the Arc de Triomphe and visit Montmartre with the Basilica of the Sacré-Cœur.'
# ---
# name: test_graph_with_insurance_queries[What's the trend in auto insurance costs over the last 3 years?]
  'The average expenditures for auto insurance have been increasing over the last three years. From 2015 to 2017, the expenditures rose from $896.66 to $1008.35, with annual increases of 3.1%, 5.4%, and 6.7%, respectively. This indicates a trend of rising costs.'
# ---
# name: test_graph_with_knowledge_query
  'Some nice things to see in Paris include the Eiffel Tower, which offers panoramic views from its observation decks, the Louvre Museum with masterpieces like the Mona Lisa, and the Gothic architectural marvel of Notre-Dame Cathedral. The Champs-Élysées, leading to the Arc de Triomphe, and Montmartre with the Basilica of the Sacré-Cœur are also must-visit spots.'
# ---
# name: test_graph_with_weather_query
  'The weather in Paris is currently 6.75°C with a feels-like temperature of 2.7°C. Humidity is at 83%, and there is light rain.'
# ---
# name: test_retrieve_with_travel_knowledge_base
  list([
    Document(id='knowledge_base[0]', metadata={'topic_id': 'Paris'}, page_content="Paris, the 'City of Light,' boasts iconic landmarks such as the Eiffel Tower, offering panoramic views from its observation decks. The Louvre Museum, home to masterpieces like the Mona Lisa, attracts art enthusiasts worldwide. Notre-Dame Cathedral, a Gothic architectural marvel, stands on the Île de la Cité. The Champs-Élysées, lined with shops and cafes, leads to the Arc de Triomphe, honoring those who fought for France. Montmartre, with its artistic heritage, features the Basilica of the Sacré-Cœur atop its hill."),
  ])
# ---
